@@ -1,4 +1,6 @@
-#!/usr/bin/python3
+#!/usr/bin/env python3
+#
+# Copyright (C) 2021, Norbert Manthey <nmanthey@conp-solutions.com>
 
 import argparse
 import contextlib
